<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <TextView
            style="@style/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message"/>

        <TextView
            style="@style/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"/>


            <EditText
                style="@style/editText"
                android:id="@+id/query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint" />

            <Button
                style="@style/button"
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search" />

        <TextView
        style="@style/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"/>

    </LinearLayout>

</ScrollView>