<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSearchButton">

    <TextView
        android:id="@+id/title"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/section"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/section"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:hint="@string/date"
            android:gravity="end"/>

    </LinearLayout>
</LinearLayout>